<resources>
    <string name="app_name">Lab8</string>

    <string name="button_text">增加条目</string>
    <string name="name">姓名</string>
    <string name="bd">生日</string>
    <string name="gift">礼物</string>

    <string name="name_newInfo">姓名：</string>
    <string name="bd_newInfo">生日：</string>
    <string name="gift_Info">礼物：</string>
    <string name="button_add">增加</string>

    <string name="tel_info">电话：</string>
</resources>
