<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.rainbow.lab8.MainActivity">
    <Button
        android:id="@+id/add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/buttonBkg"
        android:text="@string/button_text"
        android:textColor="@color/buttonText"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_margin_top"
        android:layout_marginBottom="@dimen/list_margin_top">
        <TextView
            android:layout_width="@dimen/name_width"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginLeft="@dimen/list_margin"/>
        <TextView
            android:layout_width="@dimen/bd_width"
            android:layout_height="wrap_content"
            android:text="@string/bd" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gift"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/list_margin"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lineColor"/>
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</LinearLayout>
